--- a/html/blog.html
+++ b/html/blog.html
@@ -7,15 +7,14 @@
     <title>Nuestro Blog</title>
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
-</head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 </head>
 
-</head>
-<body class="Montserrat">
+
+<body<>
 
     <div class="Newsletter-services">
         <p>Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong></p>
@@ -31,15 +30,15 @@
             </div>
             <nav class="nav">
                 <button class="cerrar">Cerrar</button>
-            <nav class="nav-services">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
+                <nav class="nav-services">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
         </div>
     </header>
 
@@ -69,92 +68,93 @@
         </section>
 
         <!-- Sección de artículos -->
-<section class="articulos">
-    <h2>Artículos Recientes</h2>
-    <div class="grid-articulos">
-        <div class="articulo">
-            <img src="../imgs/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Artículo 1">
-            <h3>Título del Artículo 1</h3>
-            <p>Breve introducción sobre el contenido del artículo 1. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/campaign-creators-pypeCEaJeZY-unsplash.jpg" alt="Artículo 2">
-            <h3>Título del Artículo 2</h3>
-            <p>Breve introducción sobre el contenido del artículo 2. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/como realizar SEO.webp" alt="Artículo 3">
-            <h3>Título del Artículo 3</h3>
-            <p>Breve introducción sobre el contenido del artículo 3. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/photo-1548345680-f5475ea5df84.avif" alt="Artículo 4">
-            <h3>Título del Artículo 4</h3>
-            <p>Breve introducción sobre el contenido del artículo 4. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/igor-miske-Px3iBXV-4TU-unsplash.jpg" alt="Artículo 5">
-            <h3>Título del Artículo 5</h3>
-            <p>Breve introducción sobre el contenido del artículo 5. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/seo services-min.jpg" alt="Artículo 6">
-            <h3>Título del Artículo 6</h3>
-            <p>Breve introducción sobre el contenido del artículo 6. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/seo-galaxy-zZ7J5qri6qY-unsplash.jpg" alt="Artículo 7">
-            <h3>Título del Artículo 7</h3>
-            <p>Breve introducción sobre el contenido del artículo 7. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/seo tecnico.webp" alt="Artículo 8">
-            <h3>Título del Artículo 8</h3>
-            <p>Breve introducción sobre el contenido del artículo 8. Este artículo cubre...</p>
-        </div>
-        <div class="articulo">
-            <img src="../imgs/seo content.webp" alt="Artículo 9">
-            <h3>Título del Artículo 9</h3>
-            <p>Breve introducción sobre el contenido del artículo 9. Este artículo cubre...</p>
-        </div>
-    </div>
-    <div class="banner">
-        <img src="../imgs/calendario.png" alt=" calendario">
-        <h2>Conversa con uno de nuestros Expertos</h2>
-        <p>Queremos conocer tus objetivos y enfocarnos en ayudarte.</p>
-        <a href="https://wa.link/hktj46" class="btn-agendar">Agendar videollamada</a>
-    </div>
-</section>
-    <!--Section 5-->
+        <section class="articulos">
+            <h2>Artículos Recientes</h2>
+            <div class="grid-articulos">
+                <div class="articulo">
+                    <img src="../imgs/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Artículo 1">
+                    <h3>Título del Artículo 1</h3>
+                    <p>Breve introducción sobre el contenido del artículo 1. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/campaign-creators-pypeCEaJeZY-unsplash.jpg" alt="Artículo 2">
+                    <h3>Título del Artículo 2</h3>
+                    <p>Breve introducción sobre el contenido del artículo 2. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/como realizar SEO.webp" alt="Artículo 3">
+                    <h3>Título del Artículo 3</h3>
+                    <p>Breve introducción sobre el contenido del artículo 3. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/photo-1548345680-f5475ea5df84.avif" alt="Artículo 4">
+                    <h3>Título del Artículo 4</h3>
+                    <p>Breve introducción sobre el contenido del artículo 4. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/igor-miske-Px3iBXV-4TU-unsplash.jpg" alt="Artículo 5">
+                    <h3>Título del Artículo 5</h3>
+                    <p>Breve introducción sobre el contenido del artículo 5. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/seo services-min.jpg" alt="Artículo 6">
+                    <h3>Título del Artículo 6</h3>
+                    <p>Breve introducción sobre el contenido del artículo 6. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/seo-galaxy-zZ7J5qri6qY-unsplash.jpg" alt="Artículo 7">
+                    <h3>Título del Artículo 7</h3>
+                    <p>Breve introducción sobre el contenido del artículo 7. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/seo tecnico.webp" alt="Artículo 8">
+                    <h3>Título del Artículo 8</h3>
+                    <p>Breve introducción sobre el contenido del artículo 8. Este artículo cubre...</p>
+                </div>
+                <div class="articulo">
+                    <img src="../imgs/seo content.webp" alt="Artículo 9">
+                    <h3>Título del Artículo 9</h3>
+                    <p>Breve introducción sobre el contenido del artículo 9. Este artículo cubre...</p>
+                </div>
+            </div>
+            <div class="banner">
+                <img src="../imgs/calendario.png" alt=" calendario">
+                <h2>Conversa con uno de nuestros Expertos</h2>
+                <p>Queremos conocer tus objetivos y enfocarnos en ayudarte.</p>
+                <a href="https://wa.link/hktj46" class="btn-agendar">Agendar videollamada</a>
+            </div>
+        </section>
+        <!--Section 5-->
 
 
-</header>
-<div class="footer">
-<footer>
-<div class="footer-content">
-    <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
-    <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
-    <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
-    <div class="social-media">
-        <a href="https://facebook.com" target="_blank">Facebook</a>
-        <a href="https://twitter.com" target="_blank">Twitter</a>
-        <a href="https://instagram.com" target="_blank">Instagram</a>
-        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-    </div>
-    <nav class="footer-menu">
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-</div>
-</footer>
-</div>
+        </header>
+        <div class="footer">
+            <footer>
+                <div class="footer-content">
+                    <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+                    <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+                    <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a>
+                    </p>
+                    <div class="social-media">
+                        <a href="https://facebook.com" target="_blank">Facebook</a>
+                        <a href="https://twitter.com" target="_blank">Twitter</a>
+                        <a href="https://instagram.com" target="_blank">Instagram</a>
+                        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                    </div>
+                    <nav class="footer-menu">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="servicios.html">Servicios</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </footer>
+        </div>
 
 
-</body>
+    </body>
 
 </html>
