--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,19 +7,14 @@
     <title>About Us | Amarellus SEO</title>
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
-</head>
-
-<body>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     </head>
 
+<header>
     <body>
-
-        <body class="Montserrat">
             <div class="Newsletter-services">
                 <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
                 </p>
@@ -69,7 +64,7 @@
                     <!--Section team-->
                     <section class="team-section">
                         <h2>100% Apasionados por el SEO</h2>
-                        <p>En Amarellus SEO LAB, somos un equipo 100% apasionado por el SEO, ¡y eso se nota! Nos encanta
+                        <p-team>En Amarellus SEO LAB, somos un equipo 100% apasionado por el SEO, ¡y eso se nota! Nos encanta
                             explorar las últimas tendencias y crear estrategias innovadoras que hagan brillar a nuestros
                             clientes en el mundo digital. ¡Con nosotros, tu éxito es nuestra misión!</p>
                         <hr class="custom-separator">
@@ -151,10 +146,10 @@
                     </section>
                     <!--Section 5-->
 
-                    <<main>
+                    <main>
                         <section class="contenedor-forms">
 
-                            <body>
+                            
                                 <div class="wrapper">
                                     <div class="h2">
                                         <h2>HOLA ¡HABLEMOS!</h2>
@@ -169,14 +164,10 @@
                                         <input class="controls" type="text" name="mensaje" id="mensaje"
                                             placeholder="Ingresa tu Mensaje">
                                         <input class="controls" type="submit" value="Enviar">
+                                    </div>
                         </section>
-                </div>
-                </div>
-        </body>
-        </main>
-
-
-        </header>
+                    </main>
+        
         <div class="footer">
             <footer>
                 <div class="footer-content">
