--- a/html/servicios.html
+++ b/html/servicios.html
@@ -20,8 +20,6 @@
 </head>
 
 <body>
-
-    <body class="Montserrat">
         <div class="Newsletter-services">
             <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
             </p>
@@ -42,7 +40,6 @@
                         </ul>
                     </nav>
                 </div>
-        </header>
         </header>
         <section>
             <div id="carouselExample" class="carousel slide">
@@ -72,7 +69,7 @@
                 <!-- Título sobre el carrusel -->
                 <div class="carousel-caption">
                     <h1>Nuestros Servicios <span>SEO</span></h1>
-                    <p>Especialistas en Posicionamiento Web</p>
+                    <p class="servicios">Especialistas en Posicionamiento Web</p>
                     <div class="wrapper">
                         <a href="contacto.html" class="contact-button" target="_blank">Agendar Videollamada</a>
                     </div>
@@ -223,8 +220,6 @@
 
             <main>
                 <section class="contenedor-forms">
-
-                    <body>
                         <div class="wrapper">
                             <div class="h2">
                                 <h2>HOLA ¡HABLEMOS!</h2>
@@ -239,12 +234,9 @@
                                 <input class="controls" type="text" name="mensaje" id="mensaje"
                                     placeholder="Ingresa tu Mensaje">
                                 <input class="controls" type="submit" value="Enviar">
+                        </div>
                 </section>
-                </div>
-                </div>
-    </body>
-    </main>
-    </header>
+            </main>
     <div class="footer">
         <footer>
             <div class="footer-content">
@@ -278,6 +270,4 @@
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
             crossorigin="anonymous"></script>
 </body>
-
-
 </html>
