--- a/html/servicios.html
+++ b/html/servicios.html
@@ -45,14 +45,14 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/imgs/photo-1600469984476-c713650f1b1b.avif" class="d-block w-100"
+                        <img src="../imgs/photo-1600469984476-c713650f1b1b.avif" class="d-block w-100"
                             alt="posicionamiento">
                     </div>
                     <div class="carousel-item">
-                        <img src="/imgs/photo-1548345680-f5475ea5df84.avif" class="d-block w-100" alt="agencia seo">
+                        <img src="../imgs/photo-1548345680-f5475ea5df84.avif" class="d-block w-100" alt="agencia seo">
                     </div>
                     <div class="carousel-item">
-                        <img src="/imgs/seo lab.jpg" class="d-block w-100" alt="seo lab">
+                        <img src="../imgs/seo lab.jpg" class="d-block w-100" alt="seo lab">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
