--- a/html/servicios.html
+++ b/html/servicios.html
@@ -240,15 +240,8 @@
     <div class="footer">
         <footer>
             <div class="footer-content">
+                <div class="footer-top"></div>
                 <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
-                <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
-                <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
-                <div class="social-media">
-                    <a href="https://facebook.com" target="_blank">Facebook</a>
-                    <a href="https://twitter.com" target="_blank">Twitter</a>
-                    <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-                </div>
                 <nav class="footer-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -258,6 +251,18 @@
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
+            </div>
+            <div class="footer-bottom"> 
+                <div class="social-media">
+                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                    <a href="https://twitter.com" target="_blank">Twitter</a>
+                    <a href="https://instagram.com" target="_blank">Instagram</a>
+                    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                </div>
+                <div class="copyright">
+                <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+                <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+                </div>
             </div>
         </footer>
     </div>
