agregamos media queries home y blog

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <img src="imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
             </div>
             <div class="hamburger" id="hamburger">
-                <img src="imgs/hamburguesa.png" alt="menu hamburguesa">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
             </div>
             <nav class="nav">
                 <button class="cerrar">Cerrar</button>
