--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         crossorigin="anonymous"></script>
     <!-- LINK CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
 </head>
+
 <body>
     <div class="Newsletter">
         <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
@@ -64,7 +66,8 @@
 
             <div class="content container">
                 <div class="text-box">
-                    <h2 class="h2-seo-lab">SEO LAB</h2>
+                    <h2 class="h2-seo-lab" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">SEO
+                        LAB</h2>
                     <p class="p1">En Amarellus SEO LAB, nos apasiona ayudar a negocios como el tuyo a crecer y
                         destacar en el
                         mundo digital. Nuestro equipo de <strong>expertos en SEO</strong> está aquí para llevar tu
@@ -96,7 +99,9 @@
     <!--Section 2-->
     <main>
         <section>
-            <div class="marcas">
+            <div class="marcas" data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500">
                 <h3 class="marcas">Marcas que Confían en Nosotros</h3>
             </div>
             <div class="clients-bar">
@@ -113,7 +118,9 @@
     <main>
         <section>
             <div class="gallery">
-                <h2 class="servicios-home">Nuestros Servicios</h2>
+                <h2 class="servicios-home" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="1500">Nuestros Servicios</h2>
 
                 <div class="grid-container">
                     <div class="grid-item">
@@ -164,7 +171,9 @@
     </main>
     <!--section 4-->
     <section class="reviews">
-        <h2 class="reviews-title">Lo que dicen nuestros clientes</h2>
+        <h2 class="reviews-title" data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="1500">Lo que dicen nuestros clientes</h2>
         <div id="reviewsCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -246,7 +255,9 @@
 
     <main>
         <section>
-            <h2 class="encuentranos">Encuéntranos</h2>
+            <h2 class="encuentranos" data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500">Encuéntranos</h2>
             <div class="mapouter">
                 <div class="gmap_canvas">
                     <iframe id="gmap_canvas"
@@ -264,10 +275,12 @@
 
             <body>
                 <div class="wrapper">
-                    <div class="h2">
+                    <div class="h2" data-aos="fade-down"
+                    data-aos-easing="linear"
+                    data-aos-duration="1500">
                         <h2>HOLA ¡HABLEMOS!</h2>
                     </div>
-                    <div class="form-register">
+                    <div class="form-register" data-aos="fade-left">
                         <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingresa tu Nombre">
                         <input class="controls" type="text" name="telefono" id="telefonos"
                             placeholder="Ingresa tu Telefono">
@@ -276,7 +289,7 @@
                             placeholder="Ingresa tu Mensaje">
                         <input class="controls" type="submit" value="Enviar">
         </section>
-    </main>  
+    </main>
 </body>
 <div class="footer">
     <footer>
@@ -309,5 +322,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
+
 </html>
