añadido SEO al sitio

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,13 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto | Amarellus SEO</title>
+
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <!-- SEO -->
+    <title>Contacto | Amarellus SEO</title>
+    <meta name="description"
+        content="Contacta con Amarellus SEO LAB para potenciar tu presencia online. Nuestro equipo está listo para ayudarte con todas tus necesidades de SEO.">
+    <meta name="keywords" content="seo, posicionamiento web, agencia seo, marketing digital">
+    <!-- Favicon -->
+    <link rel="icon" href="./imgs/icono1.png" type="image/amarellus-icon">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contactanos | Amarellus SEO LAB">
+    <meta property="og:description"
+        content="Conecta con Amarellus SEO LAB y lleva tu SEO al siguiente nivel.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.amarellus-seolab.com/home">
+    <!-- Autor de la página -->
+    <meta name="author" content="Amarellus SEO LAB">
 </head>
 
 <body>
@@ -56,24 +71,23 @@
 
         <main>
             <section class="contenedor-forms">
-                    <div class="wrapper">
-                        <div class="h2">
-                            <h2>HOLA ¡HABLEMOS!</h2>
-                        </div>
-                        <div class="form-register">
-                            <input class="controls" type="text" name="nombres" id="nombres"
-                                placeholder="Ingresa tu Nombre">
-                            <input class="controls" type="text" name="telefono" id="telefonos"
-                                placeholder="Ingresa tu Telefono">
-                            <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
-                            <input class="controls" type="text" name="mensaje" id="mensaje"
-                                placeholder="Ingresa tu Mensaje">
-                            <input class="controls" type="submit" value="Enviar">
-                        </div>
-                    </div>    
+                <div class="wrapper">
+                    <div class="h2">
+                        <h2>HOLA ¡HABLEMOS!</h2>
+                    </div>
+                    <div class="form-register">
+                        <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingresa tu Nombre">
+                        <input class="controls" type="text" name="telefono" id="telefonos"
+                            placeholder="Ingresa tu Telefono">
+                        <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
+                        <input class="controls" type="text" name="mensaje" id="mensaje"
+                            placeholder="Ingresa tu Mensaje">
+                        <input class="controls" type="submit" value="Enviar">
+                    </div>
+                </div>
             </section>
-            
-            
+
+
 
             <div class="banner">
                 <img src="../imgs/calendario.png" alt=" calendario">
@@ -83,30 +97,36 @@
             </div>
         </main>
 
-    <div class="footer">
-        <footer>
-            <div class="footer-content">
-                <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
-                <div class="social-media">
-                    <a href="https://facebook.com" target="_blank">Facebook</a>
-                    <a href="https://twitter.com" target="_blank">Twitter</a>
-                    <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        <div class="footer">
+            <footer>
+                <div class="footer-content">
+                    <div class="footer-top"></div>
+                    <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+                    <nav class="footer-menu">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="servicios.html">Servicios</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="footer-menu">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                <div class="footer-bottom">
+                    <div class="social-media">
+                        <a href="https://facebook.com" target="_blank">Facebook</a>
+                        <a href="https://twitter.com" target="_blank">Twitter</a>
+                        <a href="https://instagram.com" target="_blank">Instagram</a>
+                        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                    </div>
+                    <div class="copyright">
                         <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
                         <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy
-                        Policy</a></p>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
+                                Policy</a></p>
+                    </div>
+                </div>
+            </footer>
+        </div>
 </body>
 
 </html>
