--- a/html/servicios.html
+++ b/html/servicios.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios | Amarellus SEO</title>
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,6 +16,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <!-- SEO -->
+    <title>Nuestros Servicios SEO | Amarellus SEO</title>
+    <meta name="description"
+        content="Explora los servicios de SEO que ofrecemos en Amarellus SEO LAB. Desde SEO técnico hasta SEO local, tenemos todo lo que necesitas para crecer online.">
+    <meta name="keywords" content="seo, posicionamiento web, agencia seo, marketing digital">
+    <!-- Favicon -->
+    <link rel="icon" href="./imgs/icono1.png" type="image/amarellus-icon">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contactanos | Amarellus SEO LAB">
+    <meta property="og:description"
+        content="Descubre los servicios SEO de Amarellus SEO LAB para impulsar tu negocio.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.amarellus-seolab.com/home">
+    <!-- Autor de la página -->
+    <meta name="author" content="Amarellus SEO LAB">
 </head>
 
 <body>
@@ -244,7 +258,7 @@
                 <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
                 <nav class="footer-menu">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="blog.html">Blog</a></li>
