--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amarellus | SEO LAB</title>
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,12 +12,26 @@
         crossorigin="anonymous"></script>
     <!-- LINK CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <!-- SEO -->
+    <title>Amarellus | SEO LAB</title>
+    <meta name="description"
+        content="Potencia tu presencia en línea con nuestros servicios de SEO expertos. Desde SEO local hasta optimización técnica y de contenido, generamos resultados que aumentan el tráfico y mejoran la experiencia del usuario.">
+    <meta name="keywords" content="seo, posicionamiento web, agencia seo, marketing digital">
+    <!-- Favicon -->
+    <link rel="icon" href="./imgs/icono1.png" type="image/amarellus-icon">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Tu Agencia SEO | Amarellus SEO LAB">
+    <meta property="og:description"
+        content="Impulsa tu negocio online con Amarellus SEO LAB: optimización SEO efectiva y resultados garantizados.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.amarellus-seolab.com/home">
+    <!-- Autor de la página -->
+    <meta name="author" content="Amarellus SEO LAB">
 </head>
 
 <body>
@@ -33,9 +46,7 @@
                 <img src="imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
             </div>
             <div class="hamburger" id="hamburger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
+                <img src="imgs/hamburguesa.png" alt="menu hamburguesa">
             </div>
             <nav class="nav">
                 <button class="cerrar">Cerrar</button>
@@ -66,8 +77,7 @@
 
             <div class="content container">
                 <div class="text-box">
-                    <h2 class="h2-seo-lab" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">SEO
-                        LAB</h2>
+                    <h2 class="h2-seo-lab">SEO LAB</h2>
                     <p class="p1">En Amarellus SEO LAB, nos apasiona ayudar a negocios como el tuyo a crecer y
                         destacar en el
                         mundo digital. Nuestro equipo de <strong>expertos en SEO</strong> está aquí para llevar tu
@@ -99,9 +109,7 @@
     <!--Section 2-->
     <main>
         <section>
-            <div class="marcas" data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500">
+            <div class="marcas">
                 <h3 class="marcas">Marcas que Confían en Nosotros</h3>
             </div>
             <div class="clients-bar">
@@ -118,9 +126,7 @@
     <main>
         <section>
             <div class="gallery">
-                <h2 class="servicios-home" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="1500">Nuestros Servicios</h2>
+                <h2 class="servicios-home">Nuestros Servicios</h2>
 
                 <div class="grid-container">
                     <div class="grid-item">
@@ -171,9 +177,7 @@
     </main>
     <!--section 4-->
     <section class="reviews">
-        <h2 class="reviews-title" data-aos="fade-down"
-        data-aos-easing="linear"
-        data-aos-duration="1500">Lo que dicen nuestros clientes</h2>
+        <h2 class="reviews-title">Lo que dicen nuestros clientes</h2>
         <div id="reviewsCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -255,9 +259,7 @@
 
     <main>
         <section>
-            <h2 class="encuentranos" data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500">Encuéntranos</h2>
+            <h2 class="encuentranos">Encuéntranos</h2>
             <div class="mapouter">
                 <div class="gmap_canvas">
                     <iframe id="gmap_canvas"
@@ -275,12 +277,10 @@
 
             <body>
                 <div class="wrapper">
-                    <div class="h2" data-aos="fade-down"
-                    data-aos-easing="linear"
-                    data-aos-duration="1500">
+                    <div class="h2">
                         <h2>HOLA ¡HABLEMOS!</h2>
                     </div>
-                    <div class="form-register" data-aos="fade-left">
+                    <div class="form-register">
                         <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingresa tu Nombre">
                         <input class="controls" type="text" name="telefono" id="telefonos"
                             placeholder="Ingresa tu Telefono">
@@ -315,6 +315,16 @@
         </div>
     </footer>
 </div>
+<!--scripts de boostrap-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
 <!--scripts de boostrap-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
