--- a/html/servicios.html
+++ b/html/servicios.html
@@ -35,16 +35,24 @@
 
 <body>
         <div class="Newsletter-services">
-            <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
-            </p>
         </div>
         <header class="header-services">
-            <div>
+            <div class="Newsletter">
+                <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
+                </p>
+            </div>
+            <header class="header">
                 <div class="container">
-                    <div class="logo-services">
-                        <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+                    <div class="logo">
+                        <img src="../imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
                     </div>
-                    <nav class="nav-services">
+                    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+                    <div class="hamburger" id="hamburger">
+                        <img src="../imgs/hamburguesa.png" alt="menu hamburguesa">
+                    </div>
+                    <nav class="nav">
+                        <label for="menu-toggle" class="cerrar">Cerrar</label>
+                        <ul id="nav-links">
                         <ul>
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="servicios.html">Servicios</a></li>
