--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
         <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
         </p>
     </div>
-    </head>
     <header class="header">
         <div class="container">
             <div class="logo">
                 <img src="imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
             </div>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle" />
             <div class="hamburger" id="hamburger">
                 <img src="imgs/hamburguesa.png" alt="menu hamburguesa">
             </div>
             <nav class="nav">
-                <button class="cerrar">Cerrar</button>
+                <label for="menu-toggle" class="cerrar">Cerrar</label>
                 <ul id="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="html/servicios.html">Servicios</a></li>
@@ -294,35 +294,31 @@
 <div class="footer">
     <footer>
         <div class="footer-content">
-            <img src="imgs/amarellus white.png" alt="logo seo lab" width="100px">
-            <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
-            <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+            <div class="footer-top"></div>
+            <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+            <nav class="footer-menu">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer-bottom"> 
             <div class="social-media">
                 <a href="https://facebook.com" target="_blank">Facebook</a>
                 <a href="https://twitter.com" target="_blank">Twitter</a>
                 <a href="https://instagram.com" target="_blank">Instagram</a>
                 <a href="https://linkedin.com" target="_blank">LinkedIn</a>
             </div>
-            <nav class="footer-menu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="html/servicios.html">Servicios</a></li>
-                    <li><a href="html/nosotros.html">Nosotros</a></li>
-                    <li><a href="html/blog.html">Blog</a></li>
-                    <li><a href="html/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
+            <div class="copyright">
+            <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+            <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+            </div>
         </div>
     </footer>
-</div>
-<!--scripts de boostrap-->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-</body>
 
 </html>
 <!--scripts de boostrap-->
