--- a/html/blog.html
+++ b/html/blog.html
@@ -29,32 +29,31 @@
 
 <body<>
 
-    <div class="Newsletter-services">
-        <p>Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong></p>
-    </div>
-
-    <header class="header-services">
-        <div class="container">
-            <div class="logo-services">
-                <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
-            </div>
-            <nav class="nav">
-                <button class="cerrar">Cerrar</button>
-                <nav class="nav-services">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                    <div class="hamburger">
-                        <span class="line"></span>
-                        <span class="line"></span>
-                        <span class="line"></span>
-                    </div>
-                </nav>
+<div class="Newsletter">
+    <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
+    </p>
+</div>
+<header class="header">
+    <div class="container">
+        <div class="logo">
+            <img src="../imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
         </div>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+        <div class="hamburger" id="hamburger">
+            <img src="../imgs/hamburguesa.png" alt="menu hamburguesa">
+        </div>
+        <nav class="nav">
+            <label for="menu-toggle" class="cerrar">Cerrar</label>
+            <ul id="nav-links">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
     </header>
 
     <main>
