--- a/html/servicios.html
+++ b/html/servicios.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <!-- SEO -->
+    <!-- SEO -->
     <title>Nuestros Servicios SEO | Amarellus SEO</title>
     <meta name="description"
         content="Explora los servicios de SEO que ofrecemos en Amarellus SEO LAB. Desde SEO técnico hasta SEO local, tenemos todo lo que necesitas para crecer online.">
@@ -25,8 +25,7 @@
     <link rel="icon" href="./imgs/icono1.png" type="image/amarellus-icon">
     <!-- Open Graph -->
     <meta property="og:title" content="Contactanos | Amarellus SEO LAB">
-    <meta property="og:description"
-        content="Descubre los servicios SEO de Amarellus SEO LAB para impulsar tu negocio.">
+    <meta property="og:description" content="Descubre los servicios SEO de Amarellus SEO LAB para impulsar tu negocio.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.amarellus-seolab.com/home">
     <!-- Autor de la página -->
@@ -34,25 +33,25 @@
 </head>
 
 <body>
-        <div class="Newsletter-services">
+    <div class="Newsletter-services">
+    </div>
+    <header class="header-services">
+        <div class="Newsletter">
+            <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
+            </p>
         </div>
-        <header class="header-services">
-            <div class="Newsletter">
-                <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
-                </p>
-            </div>
-            <header class="header">
-                <div class="container">
-                    <div class="logo">
-                        <img src="../imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
-                    </div>
-                    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-                    <div class="hamburger" id="hamburger">
-                        <img src="../imgs/hamburguesa.png" alt="menu hamburguesa">
-                    </div>
-                    <nav class="nav">
-                        <label for="menu-toggle" class="cerrar">Cerrar</label>
-                        <ul id="nav-links">
+        <header class="header">
+            <div class="container">
+                <div class="logo">
+                    <img src="../imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
+                </div>
+                <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+                <div class="hamburger" id="hamburger">
+                    <img src="../imgs/hamburguesa.png" alt="menu hamburguesa">
+                </div>
+                <nav class="nav">
+                    <label for="menu-toggle" class="cerrar">Cerrar</label>
+                    <ul id="nav-links">
                         <ul>
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="servicios.html">Servicios</a></li>
@@ -60,8 +59,8 @@
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
-                    </nav>
-                </div>
+                </nav>
+            </div>
         </header>
         <section>
             <div id="carouselExample" class="carousel slide">
@@ -150,6 +149,21 @@
                         <h3>Mejora la Rapidez</h3>
                         <p>La velocidad de tu sitio web es crucial. En Amarellus SEO LAB optimizamos el tiempo de carga
                             para ofrecer una experiencia rápida y eficiente, reduciendo la tasa de rebote.</p>
+                    </div>
+                    <div class="grid-item">
+                        <img src="../imgs/png-transparent-computer-icons-geo-fence-gps-navigation-systems-environment-icon-heart-share-icon-gps-navigation-systems.png" alt="rapidez" class="service-image">
+                        <h3>Posiciona Localmente</h3>
+                        <p>En Amarellus SEO LAB, potenciamos tu visibilidad local con estrategias de SEO específicas
+                            para que tu negocio destaque en las búsquedas de tu área. Optimizamos tu presencia en Google
+                            My Business y mejoramos el contenido local para atraer a clientes potenciales cerca de ti.
+                        </p>
+                    </div>
+                    <div class="grid-item">
+                        <img src="../imgs/png-transparent-computer-icons-content-vision-and-mission-angle-text-rectangle.png" alt="rapidez" class="service-image">
+                        <h3>Contenido que Enamora</h3>
+                        <p>Nuestro contenido va más allá de informar; está diseñado para cautivar y conectar. Cada pieza
+                            que creamos está pensada para resonar profundamente con tu audiencia y dejar una impresión
+                            duradera.</p>
                     </div>
                 </div>
             </section>
@@ -242,59 +256,60 @@
 
             <main>
                 <section class="contenedor-forms">
-                        <div class="wrapper">
-                            <div class="h2">
-                                <h2>HOLA ¡HABLEMOS!</h2>
-                            </div>
-                            <div class="form-register">
-                                <input class="controls" type="text" name="nombres" id="nombres"
-                                    placeholder="Ingresa tu Nombre">
-                                <input class="controls" type="text" name="telefono" id="telefonos"
-                                    placeholder="Ingresa tu Telefono">
-                                <input class="controls" type="email" name="email" id="email"
-                                    placeholder="Ingresa tu Email">
-                                <input class="controls" type="text" name="mensaje" id="mensaje"
-                                    placeholder="Ingresa tu Mensaje">
-                                <input class="controls" type="submit" value="Enviar">
+                    <div class="wrapper">
+                        <div class="h2">
+                            <h2>HOLA ¡HABLEMOS!</h2>
+                        </div>
+                        <div class="form-register">
+                            <input class="controls" type="text" name="nombres" id="nombres"
+                                placeholder="Ingresa tu Nombre">
+                            <input class="controls" type="text" name="telefono" id="telefonos"
+                                placeholder="Ingresa tu Telefono">
+                            <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
+                            <input class="controls" type="text" name="mensaje" id="mensaje"
+                                placeholder="Ingresa tu Mensaje">
+                            <input class="controls" type="submit" value="Enviar">
                         </div>
                 </section>
             </main>
-    <div class="footer">
-        <footer>
-            <div class="footer-content">
-                <div class="footer-top"></div>
-                <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
-                <nav class="footer-menu">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
+            <div class="footer">
+                <footer>
+                    <div class="footer-content">
+                        <div class="footer-top"></div>
+                        <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+                        <nav class="footer-menu">
+                            <ul>
+                                <li><a href="../index.html">Home</a></li>
+                                <li><a href="servicios.html">Servicios</a></li>
+                                <li><a href="nosotros.html">Nosotros</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contacto.html">Contacto</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer-bottom">
+                        <div class="social-media">
+                            <a href="https://facebook.com" target="_blank">Facebook</a>
+                            <a href="https://twitter.com" target="_blank">Twitter</a>
+                            <a href="https://instagram.com" target="_blank">Instagram</a>
+                            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                        </div>
+                        <div class="copyright">
+                            <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+                            <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy
+                                    Policy</a></p>
+                        </div>
+                    </div>
+                </footer>
             </div>
-            <div class="footer-bottom"> 
-                <div class="social-media">
-                    <a href="https://facebook.com" target="_blank">Facebook</a>
-                    <a href="https://twitter.com" target="_blank">Twitter</a>
-                    <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-                </div>
-                <div class="copyright">
-                <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
-                <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
-                </div>
-            </div>
-        </footer>
-    </div>
-    <section>
-        <!--scripts de boostrap-->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-            crossorigin="anonymous"></script>
+            <section>
+                <!--scripts de boostrap-->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+                    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+                    crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+                    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+                    crossorigin="anonymous"></script>
 </body>
+
 </html>
